<resources>
    <string name="app_name">Fitter</string>

    <string name="hello_blank_fragment" translatable="false">blank fragment</string>
    <string name="login_welcome_back">Welcome back,</string>
    <string name="login_text">Login</string>
    <string name="Username">Username</string>
    <string name="email_already_registered">EMAIL ALREADY REGISTERED</string>
    <string name="pass_dont_match">PASSWORDS DON\'T MATCH</string>
    <string name="fitter" translatable="false">Fitter</string>


    <string name="exercises">Exercises</string>
    <string name="card_name">Card name<font color="#FF0000">*</font></string>
    <string name="duration">Duration<font color="#FF0000">*</font></string>
    <string name="time">Duration</string>
    <string name="description">Description</string>
    <string name="minutes">Minutes</string>
    <string name="owner">Owner</string>
    <string name="network_error">Network error</string>


    <string name="background_image">Background image</string>
    <string name="profile_image">Profile image</string>
    <string name="AddExercise">New exercise</string>
    <string name="AddCard">New card</string>
    <string name="yourWeeklyRecaps">Your Monthly Recaps</string>
    <string name="YourCards">Your Cards</string>
    <string name="yourProfile">Your profile</string>
    <string name="findUsers">Find users</string>
    <string name="home" translatable="false">Home</string>
    <string name="backArrow">Back arrow</string>
    <string name="clock">Clock</string>

    <string name="FitnessCardsReference" translatable="false">FITNESS_CARDS</string>
    <string name="AthleteReference" translatable="false">USERS</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="login_log_in">Login</string>
    <string name="Email">Email</string>
    <string name="bio">Bio</string>
    <string name="warmap">Warm-up</string>
    <string name="normalexercise">Single Exercise</string>
    <string name="series">Series</string>
    <string name="piramidal">Piramidal Exercise</string>
    <string name="select">Select</string>
    <string name="restore_time">Restore Time</string>
    <string name="RecapReference" translatable="false">RECAP_SCHEDA</string>
    <string name="card_info">Card Informations</string>
    <string name="delete">Delete acccount</string>
    <string name="done">Done</string>
    <string name="button_that_allows_you_to_modify_a_card">Allows you to modify a card</string>
    <string name="recap_information">Recap information</string>
    <string name="minutesSpent">How many minutes ?</string>
    <string name="kilogramsUsed">How many kilos ?</string>
    <string name="user_profile">User profile</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="MonthlyRecap">Monthly Recaps</string>
    <string name="BookmarkReference" translatable="false">BOOKMARKED_CARDS</string>
    <string name="there_are">There are</string>
    <string name="graph_noDataText">Start setting recaps for your card to make monthly recaps</string>
    <string name="ad" translatable="false">AD</string>

    <string name="native_ad_id_live" translatable="false">ca-app-pub-6886882793354789/7136026783</string>
    <string name="searchView_queryHint">Search here …</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="button_new_card">Allows you to create a new card</string>
    <string name="saved_cards">Saved cards</string>
    <string name="if_clicked_allows_you_to_start_a_timer_for_the_given_exercise">If clicked allows you to start a timer for the given exercise</string>
    <string name="indicates_that_this_item_can_be_moved_if_long_pressed">Indicates that this item can be moved if long pressed</string>
    <string name="edit_exercise">Allows you to edit the exercise</string>
    <string name="warning">Warning!</string>
    <string name="warning_message_modify_alert">Depending on the operation you are going to do you might lose your fitness card current progress.</string>
    <string name="native_ad_id_test" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="banner_ad_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_live" translatable="false">ca-app-pub-6886882793354789/3180251707</string>
    <string name="Continue">Continue</string>
    <string name="account_delete_warning">Are you sure you want to delete your account? this operation cannot be stopped or undone</string>
    <string name="infoAlert">Be aware that you can swipe left to right (on an exercise) to set as done an exercise and in the modify card option you can swipe right to left to delete an exercise.</string>
    <string name="inforWger">The list of exercise is taken from wger REST API, which is an online free database.</string>
    <string name="infoAuthors">Authors: Daniel Satriano, Claudio Menegotto.</string>
    <string name="infoButton">infoButton</string>

</resources>